# cpp_project_template

./: CMakeLists.txt  README.md  run.sh  test_api.cpp
api/: api.cpp  api.hpp
doc/: README.md  doc.tex
third_party_api/: CMakeLists.txt
